--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ app.config.timestamp_*.js
 # dependencies
 /node_modules
 
+# testing
+tests/.output
+playwright-report
+test-results
+
 # IDEs and editors
 /.idea
 .project
