--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "serve:prod": "bun run serve.ts",
     "test": "bun run test:unit && bun run test:e2e",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
@@ -21,6 +22,7 @@
     "@playwright/test": "^1.58.0",
     "@solidjs/testing-library": "^0.8.10",
     "@testing-library/jest-dom": "^6.9.1",
+    "@types/bun": "^1.3.6",
     "jsdom": "^27.4.0",
     "solid-devtools": "^0.34.3",
     "typescript": "^5.7.2",
